import 'package:flutter/material.dart';

class CreateEventViewModel extends ChangeNotifier {
  CreateEventViewModel();
}
